--- a/message-received.html
+++ b/message-received.html
@@ -17,7 +17,7 @@
                 <div id="info-box-full">
                     <img src="images/panda.jpg"/>
                     <h3>THANK YOU!!</h3>
-                    <p>Your message has been recived</p>
+                    <p>Your message has been received</p>
                     <p>We will respond shortly</p>  
                 </div>
             </div>
